--- a/ProblemSets/PS6/angular-app/src/app/weather-container/weather-container.component.html
+++ b/ProblemSets/PS6/angular-app/src/app/weather-container/weather-container.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
     <div class="header">
       <h1>Weather Finder</h1>
-      <p>Enter city name to find out the current weather conditions.</p>
+      <p>Enter city names separated by comma to find out the current weather conditions.</p>
     </div>
     
     <app-weather-form (search)="fetchWeather($event)" class="weather-form"></app-weather-form>
